# PharmaPulse

./: .gitignore  .replit  README.md  app.py  backend.py  docx_pdf_exporter.py  git-commands.txt  login.py  psur_app.py  pyproject.toml  replit.md  report_generator.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Build-me-a-complete-Streamlit-web-application-named-Pharma-Pulse-that-automates-the-generation-o-1753344452715_1753344452715.txt  Pasted-Fix-and-enhance-the-entire-UI-of-the-Pharma-Pulse-Streamlit-application-using-the-PwC-brand-design--1753792835859_1753792835861.txt  Pasted-Update-the-entire-Pharma-Pulse-Streamlit-application-UI-to-follow-PwC-s-brand-identity-Theme--1753791776075_1753791776076.txt
logs/: log_20250724.txt
output/: PSUR_Report_101_20250724_090101.docx  PSUR_Report_101_20250724_090133.docx  PSUR_Report_102_20250724_083531.docx
