[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.59.0",
    "docx>=0.2.4",
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
]
